--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,6 +17,7 @@
                 <li><a href="/projects/"{% if page.url == '/projects/' %} class="active"{% endif %}>Projects</a></li>
                 <li><a href="/cv/"{% if page.url == '/cv/' %} class="active"{% endif %}>CV</a></li>
                 <li><a href="/reading/"{% if page.url == '/reading/' %} class="active"{% endif %}>Reading</a></li>
+                <li><a href="/guide/"{% if page.url contains '/guide' %} class="active"{% endif %}>HFT ML Guide</a></li>
             </ul>
         </div>
         <div class="nav-section nav-extra">
