research: GP-based alpha discovery research directions (7 ideas)

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,6 +24,7 @@
             <div class="nav-section-title">Research</div>
             <ul class="nav-list" id="nav-research-list">
                 <li><a href="/research/wq-alpha-evolution/">WQ Alpha Evolution</a></li>
+                <li><a href="/research/gp-alpha-ideas/">GP Alpha Research Ideas</a></li>
                 <li><a href="/research/vol-integrated-kr/">Regime Shift &amp; Spillover</a></li>
                 <li><a href="/research/move-vasicek-kr/">MOVE-Vasicek Model</a></li>
                 <li><a href="/research/bacbb/">BACBB Strategy</a></li>
